--- a/Flutterasia/Main.storyboard
+++ b/Flutterasia/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="NyT-gb-Go0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="NyT-gb-Go0">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -101,50 +101,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="hgZ-W5-8HU">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="hgZ-W5-8HU">
+                                <rect key="frame" x="0.0" y="64" width="320" height="548"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Full Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="31x-p7-j7e">
-                                        <rect key="frame" x="8" y="81" width="304" height="30"/>
+                                        <rect key="frame" x="8" y="80" width="304" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="z1p-pY-TEy">
-                                        <rect key="frame" x="8" y="119" width="304" height="30"/>
+                                        <rect key="frame" x="8.5" y="120" width="304" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vOG-f5-DDw">
-                                        <rect key="frame" x="8" y="157" width="304" height="30"/>
+                                        <rect key="frame" x="8.5" y="160" width="304" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Bmp-4R-qQV">
-                                        <rect key="frame" x="8" y="195" width="304" height="30"/>
+                                        <rect key="frame" x="8" y="200" width="304" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Retype Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="4gc-3f-NQF">
-                                        <rect key="frame" x="8" y="233" width="304" height="30"/>
+                                        <rect key="frame" x="8" y="240" width="304.5" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kAH-ei-fkB">
-                                        <rect key="frame" x="90" y="304" width="140" height="30"/>
+                                        <rect key="frame" x="52.5" y="380" width="215" height="30"/>
                                         <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="215" id="Ytt-Md-qaR"/>
+                                        </constraints>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <state key="normal" title="Register"/>
                                         <connections>
                                             <action selector="registerButtonTapped:" destination="Fpz-cy-T2l" eventType="touchUpInside" id="Mrs-Kk-JLQ"/>
                                         </connections>
                                     </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera" translatesAutoresizingMaskIntoConstraints="NO" id="XM1-Tv-1mG">
+                                        <rect key="frame" x="120" y="295" width="80" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="80" id="aPP-5B-Qa1"/>
+                                            <constraint firstAttribute="width" constant="80" id="xhe-Kn-FP4"/>
+                                        </constraints>
+                                    </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nWS-i4-tgF">
-                                        <rect key="frame" x="8" y="357" width="304" height="30"/>
+                                        <rect key="frame" x="52.5" y="420" width="215" height="30"/>
                                         <state key="normal" title="I have an account. Let me login"/>
                                         <connections>
                                             <segue destination="Wcj-dP-Vtm" kind="unwind" identifier="backToLoginView" unwindAction="unwindToLogInScreenWithUnwindSegue:" id="vhw-3b-ZVy"/>
@@ -152,29 +162,33 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="vOG-f5-DDw" firstAttribute="trailing" secondItem="Bmp-4R-qQV" secondAttribute="trailing" id="0vq-zn-ZHD"/>
-                                    <constraint firstItem="4gc-3f-NQF" firstAttribute="trailing" secondItem="nWS-i4-tgF" secondAttribute="trailing" id="370-ee-ufr"/>
-                                    <constraint firstItem="4gc-3f-NQF" firstAttribute="top" secondItem="Bmp-4R-qQV" secondAttribute="bottom" constant="8" symbolic="YES" id="3IK-oG-kOZ"/>
-                                    <constraint firstItem="31x-p7-j7e" firstAttribute="leading" secondItem="z1p-pY-TEy" secondAttribute="leading" id="4sT-Hx-K0s"/>
-                                    <constraint firstItem="kAH-ei-fkB" firstAttribute="top" secondItem="4gc-3f-NQF" secondAttribute="bottom" constant="41" id="5oH-sO-sno"/>
-                                    <constraint firstItem="nWS-i4-tgF" firstAttribute="top" secondItem="kAH-ei-fkB" secondAttribute="bottom" constant="23" id="7O1-Mh-ewV"/>
-                                    <constraint firstItem="z1p-pY-TEy" firstAttribute="trailing" secondItem="vOG-f5-DDw" secondAttribute="trailing" id="BFe-hJ-zKP"/>
-                                    <constraint firstItem="z1p-pY-TEy" firstAttribute="top" secondItem="31x-p7-j7e" secondAttribute="bottom" constant="8" symbolic="YES" id="Iog-vV-z1m"/>
+                                    <constraint firstItem="4gc-3f-NQF" firstAttribute="width" secondItem="Bmp-4R-qQV" secondAttribute="width" id="1Bl-ee-yWq"/>
+                                    <constraint firstItem="XM1-Tv-1mG" firstAttribute="centerX" secondItem="hgZ-W5-8HU" secondAttribute="centerX" id="2Cs-pf-67c"/>
+                                    <constraint firstItem="4gc-3f-NQF" firstAttribute="top" secondItem="Bmp-4R-qQV" secondAttribute="bottom" constant="10" id="31G-tw-e23"/>
+                                    <constraint firstItem="nWS-i4-tgF" firstAttribute="top" secondItem="kAH-ei-fkB" secondAttribute="bottom" constant="10" id="C9p-aA-Ybc"/>
+                                    <constraint firstItem="4gc-3f-NQF" firstAttribute="leading" secondItem="Bmp-4R-qQV" secondAttribute="leading" id="CsE-Kw-J5D"/>
+                                    <constraint firstItem="Bmp-4R-qQV" firstAttribute="top" secondItem="vOG-f5-DDw" secondAttribute="bottom" constant="10" id="Dhq-to-fxE"/>
+                                    <constraint firstItem="Bmp-4R-qQV" firstAttribute="centerX" secondItem="hgZ-W5-8HU" secondAttribute="centerX" id="F6M-nJ-E02"/>
+                                    <constraint firstItem="vOG-f5-DDw" firstAttribute="leading" secondItem="z1p-pY-TEy" secondAttribute="leading" id="FFk-om-kF8"/>
+                                    <constraint firstItem="z1p-pY-TEy" firstAttribute="centerX" secondItem="hgZ-W5-8HU" secondAttribute="centerX" id="H54-Tp-a9k"/>
+                                    <constraint firstItem="Bmp-4R-qQV" firstAttribute="leading" secondItem="vOG-f5-DDw" secondAttribute="leading" id="HQR-SG-DDD"/>
+                                    <constraint firstItem="4gc-3f-NQF" firstAttribute="centerX" secondItem="hgZ-W5-8HU" secondAttribute="centerX" id="J67-7c-HaM"/>
                                     <constraint firstItem="31x-p7-j7e" firstAttribute="trailing" secondItem="hgZ-W5-8HU" secondAttribute="trailingMargin" id="M3m-ev-ZVu"/>
-                                    <constraint firstAttribute="bottom" secondItem="nWS-i4-tgF" secondAttribute="bottom" constant="161" id="Pdt-Ah-sOD"/>
-                                    <constraint firstItem="z1p-pY-TEy" firstAttribute="leading" secondItem="vOG-f5-DDw" secondAttribute="leading" id="PzW-uC-EwR"/>
-                                    <constraint firstItem="kAH-ei-fkB" firstAttribute="centerX" secondItem="nWS-i4-tgF" secondAttribute="centerX" id="QB8-A9-T3b"/>
-                                    <constraint firstItem="Bmp-4R-qQV" firstAttribute="trailing" secondItem="4gc-3f-NQF" secondAttribute="trailing" id="WJC-li-U0E"/>
-                                    <constraint firstItem="Bmp-4R-qQV" firstAttribute="top" secondItem="vOG-f5-DDw" secondAttribute="bottom" constant="8" symbolic="YES" id="aj5-QX-r9g"/>
-                                    <constraint firstItem="kAH-ei-fkB" firstAttribute="leading" secondItem="hgZ-W5-8HU" secondAttribute="leading" constant="90" id="eBf-2l-KWb"/>
+                                    <constraint firstItem="vOG-f5-DDw" firstAttribute="top" secondItem="z1p-pY-TEy" secondAttribute="bottom" constant="10" id="MRi-WW-X1Y"/>
+                                    <constraint firstItem="kAH-ei-fkB" firstAttribute="centerX" secondItem="hgZ-W5-8HU" secondAttribute="centerX" id="TYg-4i-4be"/>
+                                    <constraint firstItem="vOG-f5-DDw" firstAttribute="width" secondItem="z1p-pY-TEy" secondAttribute="width" id="UGV-66-s5s"/>
+                                    <constraint firstItem="z1p-pY-TEy" firstAttribute="top" secondItem="31x-p7-j7e" secondAttribute="bottom" constant="10" id="Vu8-si-JTs"/>
+                                    <constraint firstItem="kAH-ei-fkB" firstAttribute="top" secondItem="XM1-Tv-1mG" secondAttribute="bottom" constant="5" id="W9w-xr-Tzq"/>
+                                    <constraint firstItem="nWS-i4-tgF" firstAttribute="width" secondItem="kAH-ei-fkB" secondAttribute="width" id="cav-aw-wfZ"/>
+                                    <constraint firstItem="XM1-Tv-1mG" firstAttribute="top" secondItem="4gc-3f-NQF" secondAttribute="bottom" constant="25" id="fBw-ku-t4A"/>
+                                    <constraint firstItem="vOG-f5-DDw" firstAttribute="centerX" secondItem="hgZ-W5-8HU" secondAttribute="centerX" id="fCo-zR-KcD"/>
                                     <constraint firstItem="31x-p7-j7e" firstAttribute="leading" secondItem="hgZ-W5-8HU" secondAttribute="leadingMargin" id="hf0-62-1kK"/>
-                                    <constraint firstItem="31x-p7-j7e" firstAttribute="trailing" secondItem="z1p-pY-TEy" secondAttribute="trailing" id="mYu-fx-pQl"/>
-                                    <constraint firstItem="4gc-3f-NQF" firstAttribute="leading" secondItem="nWS-i4-tgF" secondAttribute="leading" id="q2f-GS-YNU"/>
-                                    <constraint firstItem="vOG-f5-DDw" firstAttribute="leading" secondItem="Bmp-4R-qQV" secondAttribute="leading" id="rPC-S8-mw8"/>
+                                    <constraint firstItem="z1p-pY-TEy" firstAttribute="width" secondItem="31x-p7-j7e" secondAttribute="width" id="kOo-b4-s6H"/>
+                                    <constraint firstItem="nWS-i4-tgF" firstAttribute="leading" secondItem="kAH-ei-fkB" secondAttribute="leading" id="t1g-PR-Ro9"/>
                                     <constraint firstItem="31x-p7-j7e" firstAttribute="centerX" secondItem="hgZ-W5-8HU" secondAttribute="centerX" id="tiN-u0-JAM"/>
-                                    <constraint firstItem="vOG-f5-DDw" firstAttribute="top" secondItem="z1p-pY-TEy" secondAttribute="bottom" constant="8" symbolic="YES" id="xeo-V6-MTL"/>
-                                    <constraint firstItem="Bmp-4R-qQV" firstAttribute="leading" secondItem="4gc-3f-NQF" secondAttribute="leading" id="xky-c4-bsR"/>
-                                    <constraint firstItem="31x-p7-j7e" firstAttribute="top" secondItem="hgZ-W5-8HU" secondAttribute="top" constant="81" id="xyN-pS-n8x"/>
+                                    <constraint firstItem="z1p-pY-TEy" firstAttribute="leading" secondItem="31x-p7-j7e" secondAttribute="leading" id="ucS-2p-WWa"/>
+                                    <constraint firstItem="Bmp-4R-qQV" firstAttribute="width" secondItem="vOG-f5-DDw" secondAttribute="width" id="viZ-rU-WzO"/>
+                                    <constraint firstItem="31x-p7-j7e" firstAttribute="top" secondItem="hgZ-W5-8HU" secondAttribute="top" constant="80" id="xyN-pS-n8x"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="delegate" destination="Fpz-cy-T2l" id="BGn-fH-xQh"/>
@@ -184,6 +198,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="hgZ-W5-8HU" secondAttribute="trailing" id="LTx-1Q-nRF"/>
+                            <constraint firstItem="hgZ-W5-8HU" firstAttribute="top" secondItem="1WX-32-LiZ" secondAttribute="bottom" constant="10" id="Ybu-PV-Bvc"/>
                             <constraint firstItem="hgZ-W5-8HU" firstAttribute="leading" secondItem="z15-lE-GWj" secondAttribute="leading" id="ZY4-4q-hPN"/>
                             <constraint firstItem="hgZ-W5-8HU" firstAttribute="top" secondItem="1WX-32-LiZ" secondAttribute="bottom" id="qJR-1A-Wbj"/>
                             <constraint firstItem="C12-no-BqM" firstAttribute="top" secondItem="hgZ-W5-8HU" secondAttribute="bottom" id="rha-jw-XGk"/>
@@ -201,7 +216,10 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ho8-wH-lkm" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Wcj-dP-Vtm" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2738" y="-184"/>
+            <point key="canvasLocation" x="2737.5" y="-184.85915492957747"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="camera" width="30" height="30"/>
+    </resources>
 </document>
